--- a/inicio.html
+++ b/inicio.html
@@ -1,38 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Croi</title>
-    <link rel="stylesheet" href="inicio.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
-</head>
-<body>
+
+    <head>
+
+        <meta charset="UTF-8">
+        <title>Croi</title>
+        <link rel="stylesheet" href="inicio.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
+
+    </head>
+
+    <body>
+
     <header>
+
         <div class="header">
+
             <div class="logo-principal"> 
+
                  <a href="inicio.html">
                     <img src="logo_nome_lado.png" alt="Froggers">
                 </a>
+
             </div>
-            <div class="main">
-                <nav id="menu">
-                    <ul>
-                        <li class="pog"><a href="inicio.html"> Inicio </a></li>
-                        <li class="pog"><a href="serviços.html"> Serviços </a></li>
-                        <li class="pog"><a href="contato.html"> Contatos </a></li>
-                        <li class="pog"><a href="localização.html"> Localização </a></li>
-                    </ul>
-                </nav>   
+
+        <div class="main">
+
+            <nav id="menu">
+
+                <ul>
+                    <li class="pog"><a href="inicio.html"> Inicio </a></li>
+                    <li class="pog"><a href="serviços.html"> Serviços </a></li>
+                    <li class="pog"><a href="contato.html"> Contatos </a></li>
+                    <li class="pog"><a href="localização.html"> Localização </a></li>
+                </ul>
+
+            </nav> 
+
+        </div>
+
+        <div class="box-agendamento"> 
+
+            <div>
+                <a href="inicio.html"> AGENDAMENTO </a>
             </div>
-            <div class="box-agendamento"> 
-                
-                    <div>
-                        <a href="contato.html">Agendamento </a>
-                    </div>
-            </div>
-        </div>    
+
+        </div>
+
+        </div> 
+
     </header>
-</body>
+
+
+
+    </body>
+
 </html>
