--- a/inicio.html
+++ b/inicio.html
@@ -53,6 +53,27 @@
 
     </header>
 
+    <div>
+
+        <ul class="slider">
+
+            <li>
+                <img src="carrosel_1.jpg" alt="carrosel_1">
+            </li>
+
+            <li>
+                <img src="carrosel_2.jpg" alt="carrosel_2">
+            </li>
+                
+            <li>
+                <img src="carrosel_3.jpg" alt="carrosel_3">
+            </li>
+
+        </ul>
+
+    </div>
+   
+
 
 
     </body>
