--- a/inicio.html
+++ b/inicio.html
@@ -21,7 +21,7 @@
             <div class="logo-principal"> 
 
                  <a href="inicio.html">
-                    <img src="logo_nome_lado.png" alt="Froggers">
+                    <img src="img/logo_nome_lado.png" alt="Froggers">
                 </a>
 
             </div>
@@ -58,15 +58,15 @@
         <ul class="slider">
 
             <li>
-                <img src="carrosel_1.jpg" alt="carrosel_1">
+                <img src="img/carrosel_1.jpg" alt="carrosel_1">
             </li>
 
             <li>
-                <img src="carrosel_2.jpg" alt="carrosel_2">
+                <img src="img/carrosel_2.jpg" alt="carrosel_2">
             </li>
                 
             <li>
-                <img src="carrosel_3.jpg" alt="carrosel_3">
+                <img src="img/carrosel_3.jpg" alt="carrosel_3">
             </li>
 
         </ul>
