--- a/inicio.html
+++ b/inicio.html
@@ -73,10 +73,21 @@
         </ul>
 
     </div>
+
+    <section class="nossas-qualidades">
+
+        <div class="container">
+
+            <div class="bloco-1"> </div>
+            <div class="bloco-2"> </div>
+            <div class="bloco-3"> </div>
+            <div class="bloco-4"> </div>
+            <div class="bloco-5"> </div>
+
+        </div>  
+
+    </section>
    
-
-
-
     </body>
 
 </html>
