section_nossas_qualidades
criei a base da parte de baixo do carrosel, só precisa centralizar as imagens e colocar o texto

--- a/inicio.html
+++ b/inicio.html
@@ -55,9 +55,38 @@
                         <img src="img/carrosel_1.jpg" alt="foto 1">
                         <img src="img/carrosel_2.jpg" alt="foto 2">
                         <img src="img/carrosel_3.jpg" alt="foto 3">
+                        <figcaption> 
+                            Nós Acreditamos Que Todos Devem 
+                            Ter Acesso A Um Ótimo Tratamento Dental
+                        </figcaption>
                     </div>
                 </section>
             </main>
+
+            <section class="nossas-qualidades">
+
+                <div class="bloco-1"> </div>
+
+                <div class="bloco-2">
+                    <img src="img/dentist.png" alt="dentist">
+
+                </div>
+
+                <div class="bloco-3">
+                    <img src="img/average_price.png" alt="average_price">
+
+                </div>
+
+                <div class="bloco-4">
+                    <img src="img/hand_holding_heart.png" alt="hand_holding_heart">
+                    
+                </div>
+
+                <div class="bloco-5"> </div>
+        
+            </section>
+
+
     </body>
 
 </html>
