--- a/inicio.html
+++ b/inicio.html
@@ -55,6 +55,7 @@
                         <img src="img/carrosel_1.jpg" alt="foto 1">
                         <img src="img/carrosel_2.jpg" alt="foto 2">
                         <img src="img/carrosel_3.jpg" alt="foto 3">
+                        <img src="img/carrosel_1.jpg" alt="foto 1">
                     </div>
                 </section>
             </main>
@@ -64,17 +65,21 @@
                 <div class="bloco-1"> </div>
 
                 <div class="bloco-2">
-                    <img src="img/dentist.png" alt="dentist">
 
+                    <img src="img/dentist.png" alt="dentist"> 
+                    <p>Equipe Selecionada</p>
+                    
                 </div>
 
                 <div class="bloco-3">
                     <img src="img/average_price.png" alt="average_price">
+                    <p>Melhor Preço</p>
 
                 </div>
 
                 <div class="bloco-4">
                     <img src="img/hand_holding_heart.png" alt="hand_holding_heart">
+                    <p>Serviço de Qualidade</p>
                     
                 </div>
 
