Base Section Localização & Agendamento

--- a/inicio.html
+++ b/inicio.html
@@ -146,6 +146,40 @@
                 
             </section>
 
+            <section>
+                <div class="localizacao-agendamento" style="background-image:url(img/background.png);">
+
+                    <div class="localizacao">
+
+                        <h1> LOCALIZAÇÃO </h1>
+
+                        <p>
+                        Av. Paulista, 925 - 2° andar <br/>
+                        São Paulo - SP
+                        </p>
+
+                    </div>
+
+                    <div class="agendamento">
+
+                        <h1> AGENDAMENTO  </h1>
+
+                        <p>
+                        Não perca tempo e faça seu agendamento <br/>
+                        pelo site ou entre em contato pelo telefone
+                        </p>
+                        <p>
+                        (11) 00000-0000
+                        </p>
+
+
+                    </div>
+
+                </div>
+
+            </section>
+           
+
     </body>
 
 </html>
