--- a/inicio.html
+++ b/inicio.html
@@ -176,7 +176,7 @@
 
                         <p>
                         Não perca tempo e faça seu agendamento <br/>
-                        pelo site ou entre em contato pelo telefone
+                        pelo site ou entre em contato pelo telefone.
                         </p>
 
                         <p>
@@ -196,7 +196,7 @@
                 </div>
 
             </section>
-        
+           
     </body>
 
 </html>
