--- a/inicio.html
+++ b/inicio.html
@@ -119,7 +119,7 @@
 
             <Div class="espaco1"> </Div>
 
-            <section class="tratamento">       
+            <div class="tratamento">       
 
                 <div class="txt2">
 
@@ -144,7 +144,7 @@
 
                 <img src="img/logo_icons.png" alt="logo_icons">
                 
-            </section>
+            </div>
 
             <section>
                 <div class="localizacao-agendamento" style="background-image:url(img/background.png);">
@@ -197,6 +197,14 @@
 
             </section>
            
+            <footer>
+
+                <div>
+
+                </div>
+
+            </footer>
+
     </body>
 
 </html>
