--- a/contato.html
+++ b/contato.html
@@ -5,10 +5,43 @@
 
         <meta charset="UTF-8">
         <title>Contato</title>
+        <link rel="stylesheet" href="css/header.css">
         
     </head>
 
     <body>
+        <header>
+
+            <div class="header">
+
+                <div class="logo-principal"> 
+
+                    <a href="inicio.html">
+                        <img src="img/logo_nome_lado.png" alt="Froggers">
+                    </a>
+
+                </div>
+
+            <div class="main">
+                <nav id="menu">
+                    <ul>
+                        <li class="pog"><a href="inicio.html"> Inicio </a></li>
+                        <li class="pog"><a href="serviços.html"> Serviços </a></li>
+                        <li class="pog"><a href="contato.html"> Contatos </a></li>
+                        <li class="pog"><a href="localização.html"> Localização </a></li>
+                    </ul>
+                </nav> 
+            </div>
+
+            <div class="box-agendamento"> 
+
+                <div>
+                    <a href="inicio.html"> AGENDAMENTO </a>
+                </div>
+
+            </div> 
+
+        </header>
     
     </body>
 
