--- a/inicio.html
+++ b/inicio.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="css/animation.css">
         <link rel="stylesheet" href="css/reset.min.css">
         <link rel="stylesheet" href="css/qualidades.css">
+        <link rel="stylesheet" href="css/header.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
@@ -199,8 +200,9 @@
            
             <footer>
 
-                <div>
-
+                <div class="foot1">
+                    <h1>FALE CONOSCO:</h1>
+                    <p>(11) 00000-0000 <br> contato@croi.com.br</p>
                 </div>
 
             </footer>
