--- a/localização.html
+++ b/localização.html
@@ -4,7 +4,7 @@
     <head>
 
         <meta charset="UTF-8">
-        <title>Locazação</title>
+        <title>Localização</title>
         
     </head>
 
