--- a/inicio.html
+++ b/inicio.html
@@ -45,7 +45,7 @@
                 <div class="box-agendamento"> 
 
                     <div>
-                        <a href="inicio.html"> AGENDAMENTO </a>
+                        <a href="agendamento.html"> AGENDAMENTO </a>
                     </div>
 
                 </div> 
@@ -137,7 +137,7 @@
                     <div class="box_saibamais">
 
                         <div>
-                            <a href="inicio.html"> SAIBA MAIS </a>
+                            <a href="serviços.html"> SAIBA MAIS </a>
                         </div>
 
                     </div>
@@ -163,7 +163,7 @@
                         <div class="box_saibamais">
 
                             <div>
-                                <a href="inicio.html"> SAIBA MAIS </a>
+                                <a href="localização.html"> SAIBA MAIS </a>
                             </div>
                             
                         </div>
@@ -188,7 +188,7 @@
                         <div class="box-agendamento">
 
                             <div>
-                                <a href="inicio.html"> AGENDAMENTO </a>
+                                <a href="agendamento.html"> AGENDAMENTO </a>
                             </div>
                             
                         </div>
@@ -227,6 +227,7 @@
                                 <li class="pog"><a href="serviços.html"> Serviços </a></li>
                                 <li class="pog"><a href="contato.html"> Contatos </a></li>
                                 <li class="pog"><a href="localização.html"> Localização </a></li>
+                                <li class="pog"><a href="agendamento.html"> Agendamento</a></li>
                             </ul>
                         </nav> 
                     </div>
