--- a/serviços.html
+++ b/serviços.html
@@ -162,7 +162,7 @@
             <div class="txt_contato">
                     
                 <div class="foot1">
-                    <h1>FALE CONOSCO:</h1>
+                    <p>FALE CONOSCO:</p>
                     <p>(11) 00000-0000 <br> contato@croi.com.br</p>
                 </div>
             
@@ -186,6 +186,7 @@
                             <li class="pog"><a href="serviços.html"> Serviços </a></li>
                             <li class="pog"><a href="contato.html"> Contatos </a></li>
                             <li class="pog"><a href="localização.html"> Localização </a></li>
+                            <li class="pog"><a href="agendamento.html"> Agendamento</a></li>
                         </ul>
                     </nav> 
                 </div>
@@ -193,6 +194,12 @@
                     <img src="img/redes_sociais.png" alt="Redes Sociais">
                 </div>
             </div>
+            <div class="txt_horario">
+                <div class="foot3">
+                    <h1>HORÁRIOS:</h1>
+                    <p>Seg - Sex: 8:00 - 18:00</p>
+                </div>
+            </div>     
 
         </footer>
 
