--- a/localização.html
+++ b/localização.html
@@ -35,7 +35,7 @@
             <div class="box-agendamento"> 
 
                 <div>
-                    <a href="inicio.html"> AGENDAMENTO </a>
+                    <a href="agendamento.html"> AGENDAMENTO </a>
                 </div>
 
             </div> 
