--- a/inicio.html
+++ b/inicio.html
@@ -215,7 +215,7 @@
                 
                 </div>
 
-                <div>
+                <div class="centro_footer">
                     <div class="logo_footer">
                         <img src="img/logo_nome_baixo.png" alt="logo">
                     </div>
