--- a/contato.html
+++ b/contato.html
@@ -87,8 +87,10 @@
                         <label>Telefone: </label>
                         <input type="number" placeholder="Digite seu Telefone">
                     </div>
-
-
+                    <div>
+                        <label>Mensagem: </label>
+                        <input type="text" placeholder="Digite sua Mensagem">
+                    </div>
                 </form>
             </div>
 
@@ -98,6 +100,11 @@
                 <p>Entre em contato conosco para ter mais informações</p>
                 <h1>Fale conosco</h1>
                 <p>(11) 00000-0000 <br> contato@croi.com.br</p>
+                <div class="box-enviar"> 
+                    <div>
+                        <a href="agendamento.html"> Enviar Mensagem </a>
+                    </div>
+                </div> 
             </div>
         
         </div>
