--- a/agendamento.html
+++ b/agendamento.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
     <head>
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <title>Agendamento</title>
         <link rel="stylesheet" href="css/agendamento.css">
@@ -33,7 +33,6 @@
                         <li class="pog"><a href="serviços.html"> Serviços </a></li>
                         <li class="pog"><a href="contato.html"> Contatos </a></li>
                         <li class="pog"><a href="localização.html"> Localização </a></li>
-                        <li class="pog"><a href="agendamento.html"> Agendamento</a></li>
                     </ul>
                 </nav> 
             </div>
