Update Validação Javascript 2

--- a/agendamento.html
+++ b/agendamento.html
@@ -168,12 +168,12 @@
 
         <div class="div_form">
             <div class="form">
-                <form>
+                <form name="agendamento" action="salvar.jsp">
                     <div>
 
                         <div>
                             <label>Nome: </label>
-                            <input id="txtNome" type="text" placeholder="Digite Seu Nome">
+                            <input id="txtNome" type="text" placeholder="Digite seu Nome">
                         </div>
 
                         <div>
@@ -188,7 +188,7 @@
 
                     <div>
                         <label>Telefone: </label> 
-                        <input id="txtTel" type="number" placeholder="Digite Seu Telefone">
+                        <input id="txtTel" type="number" placeholder="Digite seu Telefone">
                     </div>
 
                     <div>
